Wrap collapsible-content and fix inline type styling

--- a/src/blocks/collapsible-content/style.scss
+++ b/src/blocks/collapsible-content/style.scss
@@ -1,14 +1,6 @@
 .wp-block-matter-collapsible-content {
 	--_transition: var(--matter-collapsible-content--transition, var(--wp--custom--matter-collapsible-content--transition, 300ms ease-in-out));
 
-	> :first-child {
-		margin-top: 0;
-	}
-
-	> :last-child {
-		margin-bottom: 0;
-	}
-
 	.is-type-popover & {
 		left: 0;
 		opacity: 0;
@@ -22,7 +14,25 @@
 	.is-type-inline & {
 		display: grid;
 		grid-template-rows: 0fr;
-		transition: grid-template-rows var(--_transition);
+		transition: grid-template-rows var(--_transition), padding-block var(--_transition);
+
+		&__container {
+			overflow: hidden;
+		}
+	}
+
+	.is-type-inline:not(.is-open) & {
+		padding-block: 0 !important; // stylelint-disable-line declaration-no-important -- Required so content takes up no space when closed.
+	}
+
+	&__container {
+		> :first-child {
+			margin-top: 0;
+		}
+
+		> :last-child {
+			margin-bottom: 0;
+		}
 	}
 
 	.is-open & {
